# flipkart-scrapper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
examples/js_demo/: index.js  index.ts  package.json
examples/js_demo_build/: index.js  index.ts  package.json
examples/product_details/: Cargo.toml
examples/search_product/: Cargo.toml
examples/search_product/src/: main.rs
src/: lib.rs
src/product_details/: errors.rs  mod.rs  offer.rs  product.rs  seller.rs  specs.rs
src/search/: errors.rs  mod.rs  params.rs  search.rs
