[package]
name = "flipkart_scraper"
description = "Scrape Flipkart product details"
version = "0.2.8"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/dvishal485/flipkart-scraper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["serde"]
fetch = ["reqwest"]
wasm_parser = ["serde-wasm-bindgen", "wasm-bindgen", "serde", "tsify"]

[dependencies]
eyre = "0.6.12"
scraper = "0.20.0"
url = "2.5.2"
serde = { version = "1.0.204", features = ["serde_derive"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
reqwest =  { version = "0.12.5", optional = true } 
# to patch getrandom for wasm
getrandom = { version = "0.2.15", features = ["js"] }
tsify = { version = "0.4.5", features = ["js"], optional = true }

[profile.release]
# network overhead is much more than the parsing overhead, focus on binary size
opt-level = "z"