[package]
name = "flipkart_scraper"
description = "Scrape Flipkart product details"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/dvishal485/flipkart-scraper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["serde"]
fetch = ["reqwest"]
wasm_parser = ["serde-wasm-bindgen", "wasm-bindgen", "serde", "tsify"]

[dependencies]
eyre = "0.6.12"
scraper = "0.23.1"
url = "2.5.4"
serde = { version = "1.0.219", features = ["serde_derive"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
reqwest = { version = "0.12.15", optional = true }
# to patch getrandom for wasm
getrandom = { version = "0.3.3", features = ["wasm_js"] }
tsify = { version = "0.5.5", features = ["js"], optional = true }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
# network overhead is much more than the parsing overhead, focus on binary size
opt-level = "z"
