[package]
name = "product_details"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flipkart_scraper = { version = "0.3.2", features = ["fetch"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
